# boxes

./: .gitignore  README.md  compare_all.py  demo.py  demo_activity.py  demo_activity_svg.py  demo_comment.py  demo_comment_svg.py  demo_relations.py  demo_relations_svg.py  demo_state.py  demo_state_svg.py  demo_svg.py  demo_view.py  demo_view_svg.py  pyproject.toml  stress_test.py  test_multi_ports.py  test_ports.py  view_svg.py
boxes/: __init__.py  elk.py  layout.py  primitives.py  pyelk_layout.py  sugiyama.py  svg_canvas.py
tests/: pseudostate_test.py
