[tool.poetry]
name = "boxes"
version = "0.2.0"
description = "UML/SysML block diagrams in your terminal (and SVG)"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
drawille = "*"
pyelk = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.extras]
pyelk = ["pyelk"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
